--- a/index.html
+++ b/index.html
@@ -16,41 +16,46 @@
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
-    <div class="container">
-      <article>
-        <img
-          class="img-product-desktop"
-          src="images/image-product-desktop.jpg"
-          alt="images/image-product-desktop.jpg"
-        />
-        <img
-          class="img-product-mobile"
-          src="images/image-product-mobile.jpg"
-          alt="images-product-mobile.jpg"
-        />
-      </article>
-      <article>
-        <h2>Perfume</h2>
-        <h1>Gabrielle Essence Eau De Parfum</h1>
-        <p>
-          A floral, solar and voluptuous interpretation composed by Olivier
-          Polge, Perfumer-Creator for the House of CHANEL.
-        </p>
-        <div>
-          <span>$149.99</span>
-          <span><s>$169.99</s></span>
-        </div>
-        <button class="btn">
-          <img src="images/icon-cart.svg" alt="" /> Add to Cart
-        </button>
-      </article>
-    </div>
+    <div class="container"></div>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://www.instagram.com/alan_ardd/">Alan ard</a>.
-    </div>
+    <main>
+      <div class="card">
+        <div class="image">
+          <picture>
+            <source
+              media="(min-width:768px)"
+              srcset="images/image-product-desktop.jpg"
+            />
+            <img
+              src="images/image-product-mobile.jpg"
+              alt="Gabrielle-parfum.jpg"
+            />
+          </picture>
+        </div>
+        <div class="description">
+          <h2>Perfume</h2>
+          <h1>Gabrielle Essence Eau De Parfum</h1>
+          <p>
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL.
+          </p>
+          <div>
+            <span class="discount">$149.99</span>
+            <span class="price"><s>$169.99</s></span>
+          </div>
+          <button class="btn">
+            <img src="images/icon-cart.svg" alt="" /> Add to Cart
+          </button>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://www.instagram.com/alan_ardd/">Alan ard</a>.
+      </div>
+    </footer>
   </body>
 </html>
